Optimize contact section for mobile and fix link on mobile navigation

--- a/src/pages/Contact/components/ContactForm/ContactForm.scss
+++ b/src/pages/Contact/components/ContactForm/ContactForm.scss
@@ -2,7 +2,7 @@ section.contact {
   .contact-container {
     .btn {
       display: block;
-      margin: 1rem auto 2rem;
+      margin: 0 auto 2rem;
       padding: 1rem;
       width: 95%;
 
@@ -30,18 +30,54 @@ section.contact {
       background-color: #6574f7;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
     }
+
+    .btn:focus {
+      border: none;
+      box-shadow: none;
+    }
   }
 
-  .fields {
-    max-width: 42rem;
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
-    text-align: left;
-    color: #000;
-    font-size: 1.5rem;
-    line-height: 1.25;
-    font-family: 'Nunito', sans-serif;
+  form {
+    .fields {
+      display: flex;
+      flex-direction: column;
+      margin: 0 auto;
+      text-align: left;
+      color: #000;
+      font-size: 1.5rem;
+      line-height: 1.25;
+      font-family: 'Nunito', sans-serif;
+    }
+
+    label {
+      display: block;
+      font-size: 1.25rem;
+      line-height: 1;
+      padding-left: 0.25rem;
+    }
+
+    input[type='text'],
+    input[type='email'],
+    textarea {
+      margin-bottom: 0.25rem;
+      font-size: 1.25rem;
+      color: #000;
+      background-color: #ececec;
+      background-clip: padding-box;
+      border: 2px solid #fff;
+      border-radius: 10px;
+      width: 100%;
+    }
+
+    input[type='text']:focus,
+    input[type='email']:focus,
+    textarea:focus {
+      color: #000;
+      background-color: #f3f3f3;
+      outline: none;
+      border: 2px solid rgb(179, 179, 179);
+      box-shadow: none;
+    }
   }
 
   .alertMessage {
@@ -49,11 +85,33 @@ section.contact {
     flex-direction: column;
     text-align: left;
     margin: 1rem auto 0;
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     line-height: 1.25;
     font-weight: bold;
     font-family: 'Nunito', sans-serif;
-    width: 40%;
+    width: 100%;
+
+    .alert {
+      padding: 1.25rem;
+    }
+
+    .close {
+      display: none;
+    }
+
+    // Yes, h4 is a class for the alert message box
+    .h4 {
+      font-weight: bold;
+    }
+
+    p {
+      margin-bottom: 0;
+      font-weight: normal;
+
+      a {
+        font-weight: bold;
+      }
+    }
   }
 
   // 700px/43.75rem and above (Vertical tablets and large horizontal phones)
